browser game css draft 1

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spaceman HTML</title>
+    <title></title>
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    
+    <header>header</header>  
+    <main>
+        <article>
+            <div class="display">text</div>
+            <div class="display">text</div>
+            <div class="display">text</div>
+            <div class="display">text</div>
+        </article>
+    </main>
 </body>
 </html>
