browser game edits to css and pseudocode draft 3

--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <header>header</header>  
+    <header>
+        <div>strikes</div>
+        <div>wrong letters</div>
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvignette.wikia.nocookie.net%2Fsouthpark%2Fimages%2F7%2F79%2FBaseball-team.png%2Frevision%2Flatest%3Fcb%3D20170925120309&f=1&nofb=1&ipt=99a5646084b31c6e2b54a94ca1c4cc71ae5c9eb8a6f9b9266a2f63c3710f87cd&ipo=images" alt="A team of cartoon baseball players">
+    </header>  
     <main>
+        <!-- <img alt="A cartoon baseball field with players"> -->
         <article>
-            <div class="display">text</div>
-            <div class="display">text</div>
-            <div class="display">text</div>
-            <div class="display">text</div>
+            <div class="display">B</div>
+            <div class="display">A</div>
+            <div class="display">L</div>
+            <div class="display">L</div>
+            <div class="display">s</div>
         </article>
     </main>
+
 </body>
 </html>
