--- a/index.html
+++ b/index.html
@@ -9,19 +9,68 @@
 </head>
 <body>
     <header>
-        <div>strikes</div>
-        <div>wrong letters</div>
+        <h2 id="strikes">strikes: ❌❌❌</h2>
+        <div id="wrong-letters">
+            <h3>wrong letters:</h3>
+            <ul>
+                <li>a</li>
+                <li>b</li>
+                <li>c</li>
+                <li>d</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>a</li>
+                <li>b</li>
+                <li>c</li>
+                <li>d</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+                <li>e</li>
+            </ul>
+        </div>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvignette.wikia.nocookie.net%2Fsouthpark%2Fimages%2F7%2F79%2FBaseball-team.png%2Frevision%2Flatest%3Fcb%3D20170925120309&f=1&nofb=1&ipt=99a5646084b31c6e2b54a94ca1c4cc71ae5c9eb8a6f9b9266a2f63c3710f87cd&ipo=images" alt="A team of cartoon baseball players">
     </header>  
     <main>
-        <!-- <img alt="A cartoon baseball field with players"> -->
-        <article>
+        <img class="background-alt" alt="A cartoon baseball field with players">
+        <article id="displays">
             <div class="display">B</div>
             <div class="display">A</div>
             <div class="display">L</div>
             <div class="display">L</div>
-            <div class="display">s</div>
+            <!-- <div class="display">s</div> -->
         </article>
+
+        <div class="popup toggle" id="instructions">
+            <h2>Instructions:</h2>
+            <p>Guess the correct letters of a baseball term to win! If you guess wrong, you will get a strike, and the letter will go to the wrong letters list. Each time you get a correct letter, your strikes reset! Play ball!</p>
+            <button type="button">Start!</button>
+        </div>
+        <div class="popup toggle" id="home">
+            <h1>Spaceman with Southpark!</h1>
+            <button type="button">Play Game!</button>
+        </div>
+        <div class="popup toggle" id="input-popup">
+            <h1>Enter a letter!</h1>
+            <input type="text" maxlength="1">
+            <br>
+            <button type="submit">Enter</button>
+        </div>
+
     </main>
 
 </body>
