--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
         <div id="wrong-letters">
             <h3>Wrong Letters:</h3>
             <ul id="wrong-letters-list">
-                <!-- <li class="wrong-letter">B</li>
-                <li class="wrong-letter">A</li>
-                <li class="wrong-letter">L</li>
-                <li class="wrong-letter">L</li> -->
             </ul>
         </div>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fvignette.wikia.nocookie.net%2Fsouthpark%2Fimages%2F7%2F79%2FBaseball-team.png%2Frevision%2Flatest%3Fcb%3D20170925120309&f=1&nofb=1&ipt=99a5646084b31c6e2b54a94ca1c4cc71ae5c9eb8a6f9b9266a2f63c3710f87cd&ipo=images" alt="A team of cartoon baseball players">
@@ -24,13 +20,8 @@
     <main>
         <img class="background-alt" alt="A cartoon baseball field with players">
         <article id="displays">
-            <!-- <div class="display">A</div>
-            <div class="display">A</div>
-            <div class="display">A</div> -->
-        </article>
-
         <div class="popup" id="home-screen">
-            <h1>Spaceman with Southpark!</h1>
+            <h1>Spaceman Baseball</h1>
             <button id="play-game-button" type="button">Play Game!</button>
         </div>
         <div class="popup toggle" id="instructions">
