--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             alt="A team of cartoon baseball players">
     </header>
     <main>
-        <img class="background-alt" alt="A cartoon baseball field with players">
+        <img class="background-alt" alt="A cartoon baseball field with players"> 
+        <!-- I learned how to make alt text for a background image on stack overflow. -->
         <article id="displays"></article>
         <div class="popup" id="home-screen">
             <h1>Spaceman Baseball</h1>
