spaceman baseball final 5

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <img class="background-alt" alt="A cartoon baseball field with players"> 
-        <!-- I learned how to make alt text for a background image on stack overflow. -->
+        <!-- I learned how to make alt text for a background image on stack overflow. https://stackoverflow.com/questions/48913759/how-to-add-alt-text-to-background-images-making-background-images-accessible -->
         <article id="displays"></article>
         <div class="popup" id="home-screen">
             <h1>Spaceman Baseball</h1>
@@ -38,7 +38,7 @@
         <div class="popup toggle" id="input-popup">
             <h1>Enter a letter!</h1>
             <input id="input-box" type="text" maxlength="1" oninput="this.value = this.value.toUpperCase()">
-            <!-- I got the this value to uppercase from stack overflow -->
+            <!-- I got the this value to uppercase from stack overflow https://stackoverflow.com/questions/11100041/how-do-you-automatically-set-text-box-to-uppercase -->
             <br>
             <button id="input-button" type="button">Enter</button>
         </div>
